[bugfix/LEMS-2855-fix-number-line-input-outline] Fix number line input outline to meet accessible contrast standards

--- a/packages/perseus/src/styles/perseus-renderer.less
+++ b/packages/perseus/src/styles/perseus-renderer.less
@@ -175,7 +175,7 @@ div.graphie {
     }
 
     .number-input {
-        border: 1px solid #ccc;
+        border: 1px solid #909296;
         border-radius: 5px;
         margin: 0; // override
         padding: 5px 0; // override
